--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
   "name": "simple-zork",
-  "version": "0.0.1",
+  "version": "0.0.10",
   "description": "",
-  "main": "webpack.config.js",
+  "main": "lib/index.js",
   "dependencies": {
     "delegant": "^0.1.5",
     "redux": "^3.0.4",
@@ -10,18 +10,24 @@
     "virtex": "^0.1.9",
     "virtex-component": "^0.1.3",
     "virtex-dom": "^0.1.17",
-    "virtex-element": "^0.1.3"
+    "virtex-element": "^0.1.3",
+    "webpack-dev-server": "^1.12.1",
+    "webpack": "^1.12.3",
+    "es6-promise": "^3.0.2"
   },
   "devDependencies": {
+    "babel-cli": "^6.1.2",
     "babel-core": "^6.1.2",
+    "babel-loader": "^6.1.0",
     "babel-preset-es2015": "^6.1.2",
     "babel-preset-react": "^6.1.2",
-    "babel-preset-stage-2": "^6.1.2",
-    "es6-promise": "^3.0.2",
-    "webpack": "^1.12.3"
+    "babel-preset-stage-2": "^6.1.2"
   },
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "clean": "rimraf lib",
+    "build": "babel src --out-dir lib",
+    "prepublish": "npm run clean && npm run build"
   },
   "repository": {
     "type": "git",
