--- a/package.json
+++ b/package.json
@@ -1,27 +1,29 @@
 {
   "name": "simple-zork",
-  "version": "0.0.10",
+  "version": "0.0.12",
   "description": "",
   "main": "lib/index.js",
   "dependencies": {
     "delegant": "^0.1.5",
+    "es6-promise": "^3.0.2",
+    "lodash": "^3.10.1",
     "redux": "^3.0.4",
-    "vdux": "^0.1.8",
     "virtex": "^0.1.9",
     "virtex-component": "^0.1.3",
     "virtex-dom": "^0.1.17",
     "virtex-element": "^0.1.3",
-    "webpack-dev-server": "^1.12.1",
     "webpack": "^1.12.3",
-    "es6-promise": "^3.0.2"
+    "webpack-dev-server": "^1.12.1"
   },
   "devDependencies": {
-    "babel-cli": "^6.1.2",
-    "babel-core": "^6.1.2",
-    "babel-loader": "^6.1.0",
-    "babel-preset-es2015": "^6.1.2",
-    "babel-preset-react": "^6.1.2",
-    "babel-preset-stage-2": "^6.1.2"
+    "babel": "^5.6.14",
+    "babel-cli": "^6.0.0",
+    "babel-core": "^6.1.4",
+    "babel-loader": "^6.0.0",
+    "babel-preset-es2015": "^6.0.0",
+    "babel-preset-react": "^6.0.0",
+    "babel-preset-stage-2": "^6.0.0",
+    "fs": "0.0.2"
   },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
