--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "simple-zork",
-  "version": "0.0.12",
+  "version": "0.0.13",
   "description": "",
   "main": "lib/index.js",
   "dependencies": {
@@ -8,10 +8,15 @@
     "es6-promise": "^3.0.2",
     "lodash": "^3.10.1",
     "redux": "^3.0.4",
-    "virtex": "^0.1.9",
-    "virtex-component": "^0.1.3",
-    "virtex-dom": "^0.1.17",
-    "virtex-element": "^0.1.3",
+    "redux-effects": "^0.4.0",
+    "redux-effects-events": "^0.2.5",
+    "redux-ephemeral": "^0.1.3",
+    "redux-logger": "^2.0.4",
+    "redux-multi": "^0.1.10",
+    "vdom-element": "^0.2.3",
+    "vdux": "^0.1.8",
+    "vdux-local": "^0.2.0",
+    "virtual-component": "^0.2.5",
     "webpack": "^1.12.3",
     "webpack-dev-server": "^1.12.1"
   },
