--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "babel": "^6.1.18",
     "babel-cli": "^6.1.18",
     "babel-core": "^6.1.4",
+    "babel-eslint": "^4.1.5",
     "babel-loader": "^6.0.0",
     "babel-preset-es2015": "^6.0.0",
     "babel-preset-react": "^6.0.0",
@@ -35,6 +36,9 @@
     "clean": "rimraf lib",
     "build": "babel src --out-dir lib",
     "prepublish": "npm run clean && npm run build"
+  },
+  "standard": {
+    "parser": "babel-eslint"
   },
   "repository": {
     "type": "git",
