--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "simple-zork",
-  "version": "0.2.1as",
+  "version": "0.2.3",
   "description": "",
   "main": "lib/index.js",
   "dependencies": {
