--- a/package.json
+++ b/package.json
@@ -13,8 +13,9 @@
     "redux-ephemeral": "^0.1.3",
     "redux-logger": "^2.0.4",
     "redux-multi": "^0.1.10",
+    "rimraf": "^2.5.0",
     "vdom-element": "^0.2.3",
-    "vdux": "0.1.8",
+    "vdux": "^0.1.8",
     "vdux-local": "^0.2.0",
     "virtual-component": "^0.2.5",
     "webpack": "^1.12.3",
