--- a/package.json
+++ b/package.json
@@ -1,9 +1,10 @@
 {
-  "name": "simple-zork",
-  "version": "0.2.4",
+  "name": "text-game",
+  "version": "0.1.0",
   "description": "",
   "main": "lib/index.js",
   "dependencies": {
+    "@f/create-action": "^1.1.1",
     "delegant": "^0.1.5",
     "es6-promise": "^3.0.2",
     "lodash": "^3.10.1",
@@ -12,16 +13,11 @@
     "redux-effects-events": "^0.2.5",
     "redux-ephemeral": "^0.1.3",
     "redux-logger": "^2.0.4",
-    "redux-multi": "^0.1.10",
-    "vdom-element": "^0.2.3",
-    "vdux": "^0.1.8",
-    "vdux-local": "^0.2.0",
-    "virtual-component": "^0.2.5",
-    "webpack": "^1.12.3",
-    "webpack-dev-server": "^1.12.1"
+    "virtex": "^0.1.18",
+    "virtex-element": "^0.2.2",
+    "virtex-local": "^0.2.1"
   },
   "devDependencies": {
-    "babel": "^6.1.18",
     "babel-cli": "^6.1.18",
     "babel-core": "^6.1.4",
     "babel-eslint": "^4.1.5",
@@ -29,7 +25,9 @@
     "babel-preset-es2015": "^6.0.0",
     "babel-preset-react": "^6.0.0",
     "babel-preset-stage-2": "^6.0.0",
-    "fs": "0.0.2"
+    "fs": "0.0.2",
+    "webpack": "^1.12.3",
+    "webpack-dev-server": "^1.12.1"
   },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
