--- a/package.json
+++ b/package.json
@@ -34,7 +34,8 @@
     "test": "echo \"Error: no test specified\" && exit 1",
     "clean": "rimraf lib",
     "build": "babel src --out-dir lib",
-    "prepublish": "npm run clean && npm run build"
+    "postversion": "npm run build",
+    "postpublish": "npm run clean"
   },
   "standard": {
     "parser": "babel-eslint"
