--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "redux-effects-events": "^0.2.5",
     "redux-ephemeral": "^0.1.3",
     "redux-logger": "^2.0.4",
+    "vdux-preset-client": "^0.2.3",
     "virtex": "^0.1.18",
     "virtex-element": "^0.2.2",
     "virtex-local": "^0.2.1"
