--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "text-game",
-  "version": "0.1.4",
+  "name": "yo-shell",
+  "version": "0.1.0",
   "description": "",
   "main": "lib/index.js",
   "dependencies": {
