--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "redux-ephemeral": "^0.1.3",
     "redux-logger": "^2.0.4",
     "redux-multi": "^0.1.12",
+    "shell-quote": "^1.4.3",
     "vdux": "^2.1.1",
     "vdux-preset-client": "^0.2.3",
     "virtex": "^0.1.18",
