--- a/package.json
+++ b/package.json
@@ -11,6 +11,8 @@
     "babel-plugin-transform-react-jsx": "^6.4.0",
     "delegant": "^0.1.5",
     "es6-promise": "^3.0.2",
+    "hypervdux": "^0.1.3",
+    "hyperx": "^1.2.0",
     "lodash": "^3.10.1",
     "redux": "^3.0.4",
     "redux-effects": "^0.4.0",
@@ -19,10 +21,10 @@
     "redux-logger": "^2.0.4",
     "redux-multi": "^0.1.12",
     "shell-quote": "^1.4.3",
-    "vdux": "^2.1.1",
+    "vdux": "^2.2.2",
     "vdux-preset-client": "^0.2.3",
     "virtex": "^0.1.18",
-    "virtex-element": "^0.2.2",
+    "virtex-element": "^0.3.0",
     "virtex-local": "^0.2.1"
   },
   "devDependencies": {
