--- a/package.json
+++ b/package.json
@@ -8,26 +8,16 @@
     "@f/equal-obj": "^1.2.1",
     "@f/reduce": "^1.0.0",
     "@f/reduce-key": "^1.2.0",
-    "babel-plugin-transform-react-jsx": "^6.4.0",
-    "delegant": "^0.1.5",
-    "es6-promise": "^3.0.2",
+    "domready": "^1.0.8",
     "hypervdux": "^0.1.3",
     "hyperx": "^1.2.0",
     "lodash": "^3.10.1",
-    "redux": "^3.0.4",
-    "redux-effects": "^0.4.0",
-    "redux-effects-events": "^0.2.5",
-    "redux-ephemeral": "^0.1.3",
-    "redux-logger": "^2.0.4",
     "redux-multi": "^0.1.12",
     "shell-quote": "^1.4.3",
-    "vdux": "@2.2.2",
-    "vdux-preset-client": "^0.2.3",
-    "virtex": "@0.1.18",
-    "virtex-element": "@0.3.0",
-    "virtex-local": "@0.2.1"
+    "vdux": "^2.2.2"
   },
   "devDependencies": {
+    "babel-plugin-transform-react-jsx": "^6.4.0",
     "babel-cli": "^6.1.18",
     "babel-core": "^6.1.4",
     "babel-eslint": "^4.1.5",
