--- a/package.json
+++ b/package.json
@@ -4,17 +4,17 @@
   "description": "",
   "main": "lib/index.js",
   "dependencies": {
-    "@f/create-action": "^1.1.1",
-    "@f/equal-obj": "^1.2.1",
-    "@f/reduce": "^1.0.0",
-    "@f/reduce-key": "^1.2.0",
-    "domready": "^1.0.8",
-    "hypervdux": "^0.1.3",
-    "hyperx": "^1.2.0",
-    "lodash": "^3.10.1",
-    "redux-multi": "^0.1.12",
-    "shell-quote": "^1.4.3",
-    "vdux": "^2.2.2"
+    "@f/create-action": "1.1.1",
+    "@f/equal-obj": "1.2.1",
+    "@f/reduce": "1.0.0",
+    "@f/reduce-key": "1.2.0",
+    "domready": "1.0.8",
+    "hypervdux": "0.1.3",
+    "hyperx": "1.2.0",
+    "lodash": "3.10.1",
+    "redux-multi": "0.1.12",
+    "shell-quote": "1.4.3",
+    "vdux": "2.2.2"
   },
   "devDependencies": {
     "babel-plugin-transform-react-jsx": "^6.4.0",
