--- a/package.json
+++ b/package.json
@@ -6,7 +6,10 @@
   "dependencies": {
     "@f/create-action": "1.1.1",
     "@f/equal-obj": "1.2.1",
+    "@f/is-array": "^1.1.1",
     "@f/is-generator": "^1.3.2",
+    "@f/is-number": "^1.1.1",
+    "@f/is-string": "^1.1.1",
     "@f/map-gen": "^1.6.0",
     "@f/reduce": "1.0.0",
     "@f/reduce-key": "1.2.0",
@@ -17,18 +20,21 @@
     "redux-flo": "^2.2.0",
     "redux-multi": "0.1.12",
     "shell-quote": "1.4.3",
-    "vdux": "2.4.5"
+    "vdux": "2.4.5",
+    "yoco": "^1.4.2"
   },
   "devDependencies": {
-    "babel-plugin-transform-react-jsx": "^6.4.0",
+    "@f/sleep": "^1.0.0",
     "babel-cli": "^6.1.18",
     "babel-core": "^6.1.4",
     "babel-eslint": "^4.1.5",
     "babel-loader": "^6.0.0",
+    "babel-plugin-transform-react-jsx": "^6.4.0",
     "babel-preset-es2015": "^6.0.0",
     "babel-preset-react": "^6.0.0",
     "babel-preset-stage-2": "^6.0.0",
     "fs": "0.0.2",
+    "redux-logger": "^2.6.1",
     "rimraf": "^2.5.0",
     "webpack": "^1.12.3",
     "webpack-dev-server": "^1.12.1"
