--- a/package.json
+++ b/package.json
@@ -21,23 +21,29 @@
     "redux-multi": "0.1.12",
     "shell-quote": "1.4.3",
     "vdux": "2.4.5",
-    "yoco": "^1.4.2"
+    "yoco": "^1.6.2"
   },
   "devDependencies": {
+    "@f/channel": "^1.1.0",
+    "@f/compose": "^1.0.1",
+    "@f/flatten-gen": "^2.0.0",
     "@f/sleep": "^1.0.0",
     "babel-cli": "^6.1.18",
-    "babel-core": "^6.1.4",
+    "babel-core": "^6.7.4",
     "babel-eslint": "^4.1.5",
-    "babel-loader": "^6.0.0",
+    "babel-loader": "^6.2.4",
     "babel-plugin-transform-react-jsx": "^6.4.0",
     "babel-preset-es2015": "^6.0.0",
     "babel-preset-react": "^6.0.0",
     "babel-preset-stage-2": "^6.0.0",
+    "ev3-client": "^0.1.41",
     "fs": "0.0.2",
     "redux-logger": "^2.6.1",
     "rimraf": "^2.5.0",
+    "tls": "0.0.1",
     "webpack": "^1.12.3",
-    "webpack-dev-server": "^1.12.1"
+    "webpack-dev-server": "^1.12.1",
+    "ws": "^1.0.1"
   },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
