--- a/package.json
+++ b/package.json
@@ -48,8 +48,7 @@
     "test": "echo \"Error: no test specified\" && exit 1",
     "clean": "rimraf lib",
     "build": "babel src --out-dir lib",
-    "postversion": "npm run build",
-    "postpublish": "npm run clean"
+    "postversion": "npm run build"
   },
   "repository": {
     "type": "git",
