--- a/package.json
+++ b/package.json
@@ -1,27 +1,25 @@
 {
   "name": "cycle-shell",
-  "version": "0.4.5",
+  "version": "0.4.8",
   "description": "",
   "main": "lib/index.js",
   "dependencies": {
     "@f/create-action": "1.1.1",
     "@f/equal-obj": "1.2.1",
-    "@f/is-array": "^1.1.1",
-    "@f/is-generator": "^1.3.2",
-    "@f/is-number": "^1.1.1",
-    "@f/is-string": "^1.1.1",
-    "@f/map-gen": "^1.6.0",
+    "@f/is-array": "1.1.1",
+    "@f/is-generator": "1.3.2",
+    "@f/is-number": "1.1.1",
+    "@f/is-string": "1.1.1",
+    "@f/map-gen": "1.6.0",
     "@f/reduce": "1.0.0",
     "@f/reduce-key": "1.2.0",
-    "domready": "^1.0.8",
-    "hypervdux": "0.1.3",
-    "hyperx": "1.2.0",
+    "domready": "1.0.8",
     "lodash": "3.10.1",
-    "redux-flo": "^2.2.0",
+    "redux-flo": "2.2.0",
     "redux-multi": "0.1.12",
     "shell-quote": "1.4.3",
     "vdux": "2.4.5",
-    "yoco": "^1.6.2"
+    "yoco": "1.6.2"
   },
   "devDependencies": {
     "@f/channel": "^1.1.0",
@@ -36,28 +34,41 @@
     "babel-preset-es2015": "^6.0.0",
     "babel-preset-react": "^6.0.0",
     "babel-preset-stage-2": "^6.0.0",
-    "ev3-client": "^0.1.41",
+    "babel-tape-runner": "^2.0.1",
+    "babelify": "^7.2.0",
+    "ev3-client": "^0.1.53",
     "fs": "0.0.2",
     "rimraf": "^2.5.0",
+    "standard": "^6.0.8",
+    "tape": "^4.5.1",
     "tls": "0.0.1",
     "webpack": "^1.12.3",
-    "webpack-dev-server": "^1.12.1",
-    "ws": "^1.0.1"
+    "webpack-dev-server": "^1.12.1"
   },
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "clean": "rimraf lib",
+    "test": "npm run validate && browserify test/*.js -t babelify | tape-run",
+    "clean": "rm -rf lib",
     "build": "babel src --out-dir lib",
-    "postversion": "npm run build"
+    "preversion": "npm run test && npm run build",
+    "postversion": "git push && git push --tags && npm publish --access=public",
+    "validate": "standard",
+    "init:travis": "travis enable && touch test/test.js",
+    "init": "npm install && npm run init:git && npm run init:travis",
+    "dev": "beefy src/index.js"
+  },
+  "standard": {
+    "ignore": [
+      "examples/**"
+    ]
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/danleavitt0/simple-zork.git"
+    "url": "git+https://github.com/danleavitt0/cycle-shell.git"
   },
   "author": "danleavitt0",
   "license": "ISC",
   "bugs": {
-    "url": "https://github.com/danleavitt0/simple-zork/issues"
+    "url": "https://github.com/danleavitt0/cycle-shell/issues"
   },
-  "homepage": "https://github.com/danleavitt0/simple-zork#readme"
+  "homepage": "https://github.com/danleavitt0/cycle-shell#readme"
 }
