--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "rimraf": "^2.5.0",
     "standard": "^6.0.8",
     "tape": "^4.5.1",
+    "tape-run": "^2.1.3",
     "tls": "0.0.1",
     "webpack": "^1.12.3",
     "webpack-dev-server": "^1.12.1"
