--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@f/map-gen": "1.6.0",
     "@f/reduce": "1.0.0",
     "@f/reduce-key": "1.2.0",
+    "component-emitter": "^1.2.1",
     "domready": "1.0.8",
     "lodash": "3.10.1",
     "redux-flo": "2.2.0",
