--- a/package.json
+++ b/package.json
@@ -19,7 +19,7 @@
     "redux-flo": "2.2.0",
     "redux-multi": "0.1.12",
     "shell-quote": "1.4.3",
-    "vdux-smaller": "^0.1.5",
+    "vdux": "2.4.10",
     "yoco": "1.6.2"
   },
   "devDependencies": {
